--- a/res/layout/route_widget.xml
+++ b/res/layout/route_widget.xml
@@ -9,7 +9,7 @@
         android:gravity="bottom"
         sothree:panelHeight="@dimen/route_footer_height"
         sothree:shadowHeight="4dp"
-        sothree:paralaxOffset="200dp">
+        sothree:paralaxOffset="110dp">
 
     <RelativeLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -19,34 +19,63 @@
         <android.support.v4.view.ViewPager
                 android:id="@+id/routes"
                 android:layout_width="match_parent"
-                android:background="@color/transparent_white"
                 android:layout_height="@dimen/route_header_height"
                 android:keepScreenOn="true" />
 
+        <ImageButton
+                android:id="@+id/resume_button"
+                android:src="@drawable/ic_resume"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignRight="@id/routes"
+                android:padding="15dp"
+                android:background="@android:color/transparent"
+                android:visibility="gone" />
     </RelativeLayout>
 
+
+
     <RelativeLayout
+            android:id="@+id/footer_wrapper"
             xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_gravity="top"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+        <View
+                android:id="@+id/drag_area"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:background="@android:color/transparent" />
 
         <LinearLayout
                 android:id="@+id/footer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="top"
-                android:background="@android:color/white"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/default_padding_vertical"
-                android:paddingLeft="@dimen/default_padding_horizontal"
-                android:paddingRight="@dimen/narrow_padding_horizontal"
-                android:paddingTop="@dimen/default_padding_vertical">
+                android:background="@color/transparent_white"
+                android:orientation="vertical">
+
+            <com.mapzen.widget.DistanceView
+                    android:id="@+id/destination_distance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="0"
+                    android:fontFamily="sans-serif-condensed"
+                    android:textStyle="bold"
+                    android:textColor="@color/brown"
+                    android:textSize="20sp" />
 
             <TextView
                     android:id="@+id/destination_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
+                    android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:ellipsize="end"
                     android:maxLines="1"
@@ -55,45 +84,24 @@
                     android:fontFamily="sans-serif-condensed"
                     android:textSize="16sp" />
 
-            <com.mapzen.widget.DistanceView
-                    android:id="@+id/destination_distance"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/narrow_padding_horizontal"
-                    android:layout_weight="0"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textStyle="bold"
-                    android:textColor="@color/brown"
-                    android:textSize="16sp" />
-
-            <ImageButton
-                    android:id="@+id/overflow_menu"
-                    android:layout_width="@dimen/icon_width"
-                    android:layout_height="@dimen/icon_height"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/narrow_padding_horizontal"
-                    android:layout_weight="0"
-                    android:background="@drawable/selectable_background_mapzen"
-                    android:contentDescription="@string/overflow_menu"
-                    android:src="@drawable/ic_menu_moreoverflow_normal_holo_light" />
-
         </LinearLayout>
 
-        <Button
-                android:id="@+id/resume_button"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/route_resume_height"
-                android:layout_above="@id/footer"
-                android:text="@string/route_resume_button"
-                android:visibility="gone" />
+        <ImageButton
+                android:id="@+id/overflow_menu"
+                android:layout_width="@dimen/icon_width"
+                android:layout_height="@dimen/icon_height"
+                android:layout_gravity="right"
+                android:layout_alignRight="@id/footer"
+                android:background="@drawable/selectable_background_mapzen"
+                android:src="@drawable/ic_menu_overflow_normal" />
 
         <View
                 android:id="@+id/divider"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/divider_height"
+                android:layout_height="20dp"
                 android:layout_above="@id/footer"
                 android:background="@color/dark_gray" />
+
 
         <com.mapzen.widget.DebugView
                 android:id="@+id/debugging"
