--- a/res/layout/instruction.xml
+++ b/res/layout/instruction.xml
@@ -1,42 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:layout_gravity="fill_horizontal">
+              android:layout_width="match_parent"
+              android:layout_height="84dp">
+    <ImageView
+            android:id="@+id/left_arrow"
+            android:src="@drawable/ic_left_arrow"
+            android:layout_gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingLeft="15dp"/>
+
+<LinearLayout
+    android:layout_width="48dp"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+        android:paddingLeft="10dp">
 
     <ImageView
-        android:id="@+id/turn_icon"
-        android:contentDescription="@string/route_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/default_margin" />
+            android:id="@+id/turn_icon"
+            android:contentDescription="@string/route_description"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="12dp"/>
+
+    <TextView
+            android:id="@+id/distance_instruction"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="sans-serif-condensed"
+            android:textStyle="bold"
+            android:textColor="@color/brown"/>
+    </LinearLayout>
 
     <ImageView
-        android:id="@+id/turn_icon_after_action"
-        android:contentDescription="@string/route_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:layout_margin="@dimen/default_margin" />
+            android:id="@+id/turn_icon_after_action"
+            android:contentDescription="@string/route_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_margin="@dimen/default_margin" />
 
     <TextView
-        android:id="@+id/full_instruction"
-        android:layout_width="0dip"
-        android:layout_weight="1"
-        android:textColor="@android:color/white"
-        android:textSize="20sp"
-        android:layout_margin="@dimen/default_margin"
-        android:layout_height="wrap_content" />
+            android:id="@+id/full_instruction"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="sans-serif-regular"
+            android:gravity="center"
+            android:layout_gravity="center_vertical"
+            android:textAlignment="center"
+            android:textColor="@color/brown"
+            android:textSize="25dp"
+            android:paddingLeft="10dp"
+            android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/full_instruction_after_action"
-        android:layout_width="0dip"
-        android:layout_weight="1"
-        android:textColor="@android:color/white"
-        android:textSize="20sp"
-        android:layout_margin="@dimen/default_margin"
-        android:visibility="gone"
-        android:layout_height="wrap_content" />
+            android:id="@+id/full_instruction_after_action"
+            android:layout_width="0dip"
+            android:layout_weight="1"
+            android:textColor="@color/brown"
+            android:textSize="30sp"
+            android:layout_margin="@dimen/default_margin"
+            android:visibility="gone"
+            android:layout_height="wrap_content" />
+    <ImageView
+            android:src="@drawable/ic_right_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingRight="15dp"/>
 
- </LinearLayout>
+</LinearLayout>
