adds single and multi search result view

--- a/res/layout/base.xml
+++ b/res/layout/base.xml
@@ -3,19 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/pager_results_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@android:color/white" />
+
 
     <fragment
         android:id="@+id/map_fragment"
         class="com.mapzen.fragment.MapFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/pager_results_container" />
+        android:layout_height="match_parent"/>
+
+    <FrameLayout
+            android:id="@+id/pager_results_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"/>
+
 
     <FrameLayout
         android:id="@+id/routes_preview_container"
@@ -37,4 +38,4 @@
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
 
-</RelativeLayout>
+/N</RelativeLayout>
