--- a/res/layout/instruction.xml
+++ b/res/layout/instruction.xml
@@ -64,6 +64,7 @@
             android:visibility="gone"
             android:layout_height="wrap_content" />
     <ImageView
+            android:id="@+id/right_arrow"
             android:src="@drawable/ic_right_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
