--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="lets_go_light_blue">#50a4db</color>
     <color name="lets_go_dark_blue">#007bb2</color>
-    <color name="destination_green">#68a547</color>
+    <color name="destination_green">#CC91c475</color>
     <color name="teal_background">#6da1a5</color>
     <color name="button_red">#d46a5f</color>
     <color name="button_dark_blue">#345557</color>
