adds new dimensions for instructions

--- a/res/layout/base.xml
+++ b/res/layout/base.xml
@@ -3,20 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-
     <fragment
         android:id="@+id/map_fragment"
         class="com.mapzen.fragment.MapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
     <FrameLayout
-            android:id="@+id/pager_results_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"/>
-
+        android:id="@+id/pager_results_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
 
     <FrameLayout
         android:id="@+id/routes_preview_container"
@@ -29,13 +26,13 @@
         android:layout_height="match_parent" />
 
     <FrameLayout
-       android:id="@+id/routes_container"
-       android:layout_width="fill_parent"
-       android:layout_height="match_parent" />
+        android:id="@+id/routes_container"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent" />
 
     <FrameLayout
-       android:id="@+id/settings"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent" />
+        android:id="@+id/settings"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-/N</RelativeLayout>
+</RelativeLayout>
