--- a/res/layout/full_results_list.xml
+++ b/res/layout/full_results_list.xml
@@ -20,7 +20,7 @@
 
     <ListView
         android:id="@android:id/list"
-        android:background="@android:color/transparent"
+        android:background="@android:color/white"
         android:layout_height="match_parent"
         android:layout_width="match_parent" />
 </LinearLayout>
