--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -19,6 +19,12 @@
     <dimen name="motto_bottom_margin">110dp</dimen>
     <dimen name="button_font_size">10pt</dimen>
     <dimen name="motto_font_size">16pt</dimen>
+    <dimen name="result_pager_height">75dp</dimen>
+    <dimen name="instruction_height">84dp</dimen>
+    <dimen name="arrow_padding">15dp</dimen>
+    <dimen name="turn_icon_height">40dp</dimen>
+    <dimen name="turn_icon_margin">12dp</dimen>
+    <dimen name="instruction_horizontal_padding">10dp</dimen>
 
     <!-- fonts -->
     <dimen name="big">32sp</dimen>
