--- a/res/layout/route_preview.xml
+++ b/res/layout/route_preview.xml
@@ -1,180 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="fill_horizontal"
-                android:background="@android:color/transparent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="fill_horizontal"
+    android:background="@android:color/transparent">
 
     <LinearLayout
-            android:id="@+id/top_row"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingLeft="15dp"
-            android:paddingTop="15dp"
-            android:background="@color/transparent_white">
+        android:id="@+id/top_row"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingLeft="@dimen/route_preview_top_padding"
+        android:paddingTop="@dimen/route_preview_top_padding"
+        android:background="@color/transparent_white">
 
         <ImageButton
-                android:id="@+id/route_reverse"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:background="@android:color/transparent"
-                android:contentDescription="@string/reverse"
-                android:src="@drawable/ic_switch" />
+            android:id="@+id/route_reverse"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/reverse"
+            android:src="@drawable/ic_switch" />
 
 
         <LinearLayout
-                android:id="@+id/places"
-                android:layout_weight="3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/default_margin"
-                android:orientation="vertical">
+            android:id="@+id/places"
+            android:layout_weight="3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/default_margin"
+            android:orientation="vertical">
 
             <LinearLayout
-                    android:id="@+id/start_location_layout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                android:id="@+id/start_location_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
                 <TextView
-                        android:id="@+id/from_text"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:textColor="@color/dark_gray"
-                        android:textSize="16sp"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:text="From:"
-                        android:fontFamily="sans-serif-condensed"/>
-            <ImageView
+                    android:id="@+id/from_text"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="@dimen/small"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:text="@string/from_text"
+                    android:fontFamily="sans-serif-condensed" />
+                <ImageView
                     android:id="@+id/starting_location_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_locate"/>
+                    android:src="@drawable/ic_locate" />
 
-            <TextView
+                <TextView
                     android:id="@+id/starting_point"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:textColor="@color/brown"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/medium"
                     android:padding="@dimen/default_padding"
                     android:layout_width="match_parent"
                     android:layout_marginBottom="1dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-condensed"/>
+                    android:fontFamily="sans-serif-condensed" />
             </LinearLayout>
 
             <View
-                    android:id="@+id/border"
-                    android:layout_width="wrap_content"
-                    android:layout_marginRight="30dp"
-                    android:layout_height="1dp"
-                    android:background="@color/transparent_gray" />
+                android:id="@+id/border"
+                android:layout_width="wrap_content"
+                android:layout_marginRight="@dimen/route_preview_border_margin"
+                android:layout_height="1dp"
+                android:background="@color/transparent_gray" />
 
             <LinearLayout
-                    android:id="@+id/destination_layout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                android:id="@+id/destination_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
 
                 <TextView
-                        android:id="@+id/to_text"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:textColor="@color/dark_gray"
-                        android:textSize="16sp"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:text="To:"
-                        android:fontFamily="sans-serif-condensed"/>
+                    android:id="@+id/to_text"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textColor="@color/dark_gray"
+                    android:textSize="@dimen/small"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:text="@string/to_text"
+                    android:fontFamily="sans-serif-condensed" />
+
                 <ImageView
-                        android:id="@+id/destination_location_icon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_locate"
-                        android:visibility="gone"/>
-            <TextView
+                    android:id="@+id/destination_location_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_locate"
+                    android:visibility="gone" />
+                <TextView
                     android:id="@+id/destination"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:textColor="@color/brown"
-                    android:textSize="20sp"
+                    android:textSize="@dimen/medium"
                     android:padding="@dimen/default_padding"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-condensed"/>
-
-                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
-
-
     </LinearLayout>
 
     <LinearLayout
-            android:id="@+id/location_divider"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        android:id="@+id/location_divider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/top_row"
+        android:paddingRight="@dimen/location_divider_padding"
+        android:orientation="vertical"
+        android:background="@color/transparent_white">
+
+        <View
             android:layout_below="@id/top_row"
-            android:paddingRight="15dp"
-            android:orientation="vertical"
-            android:background="@color/transparent_white">
-
-     <View
-                android:layout_below="@id/top_row"
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:layout_marginRight="15dp"
-                android:layout_marginLeft="15dp"
-                android:background="@color/brown" />
-
-    <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginRight="@dimen/location_divider_padding"
+            android:layout_marginLeft="@dimen/location_divider_padding"
             android:background="@color/brown" />
 
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:layout_marginRight="@dimen/location_divider_padding"
+            android:layout_marginLeft="@dimen/location_divider_padding"
+            android:layout_marginTop="2dp"
+            android:background="@color/brown" />
     </LinearLayout>
 
     <LinearLayout
-            android:id="@+id/routing_options"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/location_divider"
-            android:gravity="center_horizontal"
-            android:background="@color/transparent_white"
-            android:divider="@color/dark_gray">
+        android:id="@+id/routing_options"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/location_divider"
+        android:gravity="center_horizontal"
+        android:background="@color/transparent_white"
+        android:divider="@color/dark_gray">
 
         <RadioGroup
-                android:id="@+id/routing_mode"
+            android:id="@+id/routing_mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:orientation="horizontal">
+            <RadioButton
+                android:id="@+id/by_car"
+                android:checked="true"
+                android:button="@drawable/radio_button_car"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:orientation="horizontal">
-
+                android:layout_height="wrap_content" />
             <RadioButton
-                    android:id="@+id/by_car"
-                    android:checked="true"
-                    android:button="@drawable/radio_button_car"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                android:id="@+id/by_bike"
+                android:button="@drawable/radio_button_bike"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
             <RadioButton
-                    android:id="@+id/by_bike"
-                    android:button="@drawable/radio_button_bike"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            <RadioButton
-                    android:id="@+id/by_foot"
-                    android:button="@drawable/radio_button_walk"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
+                android:id="@+id/by_foot"
+                android:button="@drawable/radio_button_walk"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </RadioGroup>
     </LinearLayout>
 
@@ -190,44 +184,43 @@
             android:background="@android:color/white">
 
         <TextView
-                android:id="@+id/start"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_marginLeft="8dp"
-                android:drawablePadding="-4dp"
-                android:drawableTop="@drawable/ic_lets_go"
-                android:textColor="@color/lets_go"
-                android:text="@string/start" />
+            android:id="@+id/start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="9dp"
+            android:drawablePadding="-4dp"
+            android:drawableTop="@drawable/ic_lets_go"
+            android:textColor="@color/lets_go"
+            android:text="@string/start" />
 
         <TextView
-                android:id="@+id/destination_preview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_toLeftOf="@id/start"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textColor="@android:color/black"
-                android:textSize="20sp"
-                android:text="@string/destination_preview" />
+            android:id="@+id/destination_preview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@id/start"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/medium"
+            android:text="@string/destination_preview" />
 
         <com.mapzen.widget.DistanceView
-                android:id="@+id/destination_preview_distance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/destination_preview"
-                android:textSize="16sp"
-                android:text="@string/destination_preview_distance" />
-
+            android:id="@+id/destination_preview_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/destination_preview"
+            android:textSize="@dimen/small"
+            android:text="@string/destination_preview_distance" />
     </RelativeLayout>
 
     <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/divider_height"
-            android:layout_above="@id/destination_container"
-            android:background="@color/dark_gray" />
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/divider_height"
+        android:layout_above="@id/destination_container"
+        android:background="@color/dark_gray" />
 
 </RelativeLayout>
