--- a/res/layout/route_widget.xml
+++ b/res/layout/route_widget.xml
@@ -9,108 +9,101 @@
         android:gravity="bottom"
         sothree:panelHeight="@dimen/route_footer_height"
         sothree:shadowHeight="4dp"
-        sothree:paralaxOffset="110dp">
+        sothree:paralaxOffset="@dimen/parallax_offset">
 
     <RelativeLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <android.support.v4.view.ViewPager
-                android:id="@+id/routes"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/route_header_height"
-                android:keepScreenOn="true" />
+            android:id="@+id/routes"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/route_header_height"
+            android:keepScreenOn="true" />
 
         <ImageButton
-                android:id="@+id/resume_button"
-                android:src="@drawable/ic_resume"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignRight="@id/routes"
-                android:padding="15dp"
-                android:background="@android:color/transparent"
-                android:visibility="gone" />
+            android:id="@+id/resume_button"
+            android:src="@drawable/ic_resume"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignRight="@id/routes"
+            android:padding="@dimen/resume_padding"
+            android:background="@android:color/transparent"
+            android:visibility="gone" />
     </RelativeLayout>
 
-
-
     <RelativeLayout
-            android:id="@+id/footer_wrapper"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_gravity="top"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+        android:id="@+id/footer_wrapper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_gravity="top"
+        android:orientation="horizontal">
 
         <View
-                android:id="@+id/drag_area"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:background="@android:color/transparent" />
+            android:id="@+id/drag_area"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/drag_area_height"
+            android:background="@android:color/transparent" />
 
         <LinearLayout
-                android:id="@+id/footer"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="top"
-                android:background="@color/transparent_white"
-                android:orientation="vertical">
+            android:id="@+id/footer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="top"
+            android:paddingLeft="@dimen/routing_footer_left_padding"
+            android:background="@color/transparent_white"
+            android:orientation="vertical">
 
             <com.mapzen.widget.DistanceView
-                    android:id="@+id/destination_distance"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="top"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="0"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textStyle="bold"
-                    android:textColor="@color/brown"
-                    android:textSize="20sp" />
+                android:id="@+id/destination_distance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:layout_weight="0"
+                android:fontFamily="sans-serif-condensed"
+                android:textStyle="bold"
+                android:textColor="@color/brown"
+                android:textSize="@dimen/medium" />
 
             <TextView
-                    android:id="@+id/destination_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="top"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textColor="@color/brown"
-                    android:fontFamily="sans-serif-condensed"
-                    android:textSize="16sp" />
-
+                android:id="@+id/destination_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="@color/brown"
+                android:fontFamily="sans-serif-condensed"
+                android:textSize="@dimen/small" />
         </LinearLayout>
 
         <ImageButton
-                android:id="@+id/overflow_menu"
-                android:layout_width="@dimen/icon_width"
-                android:layout_height="@dimen/icon_height"
-                android:layout_gravity="right"
-                android:layout_alignRight="@id/footer"
-                android:background="@drawable/selectable_background_mapzen"
-                android:src="@drawable/ic_menu_overflow" />
+            android:id="@+id/overflow_menu"
+            android:layout_width="@dimen/icon_width"
+            android:layout_height="@dimen/icon_height"
+            android:layout_gravity="right"
+            android:layout_alignRight="@id/footer"
+            android:background="@drawable/selectable_background_mapzen"
+            android:src="@drawable/ic_menu_overflow" />
 
         <View
-                android:id="@+id/divider"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_above="@id/footer"
-                android:background="@color/dark_gray" />
-
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_above="@id/footer"
+            android:background="@color/dark_gray" />
 
         <com.mapzen.widget.DebugView
-                android:id="@+id/debugging"
-                android:layout_width="match_parent"
-                android:layout_height="148dp"
-                android:layout_above="@id/divider"
-                android:background="#66000000"
-                android:visibility="gone" />
-
+            android:id="@+id/debugging"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/debug_view_height"
+            android:layout_above="@id/divider"
+            android:background="#66000000"
+            android:visibility="gone" />
     </RelativeLayout>
-
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
