--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -25,7 +25,15 @@
     <dimen name="turn_icon_height">40dp</dimen>
     <dimen name="turn_icon_margin">12dp</dimen>
     <dimen name="instruction_horizontal_padding">10dp</dimen>
-
+    <dimen name="turn_info_width">48dp</dimen>
+    <dimen name="route_preview_top_padding">15dp</dimen>
+    <dimen name="route_preview_border_margin">30dp</dimen>
+    <dimen name="location_divider_padding">15dp</dimen>
+    <dimen name="parallax_offset">110dp</dimen>
+    <dimen name="resume_padding">15dp</dimen>
+    <dimen name="drag_area_height">20dp</dimen>
+    <dimen name="debug_view_height">148dp</dimen>
+    <dimen name="routing_footer_left_padding">10dp</dimen>
     <!-- fonts -->
     <dimen name="big">32sp</dimen>
     <dimen name="medium">21sp</dimen>
