makes location button move according to what fragment is visible

--- a/res/layout/base.xml
+++ b/res/layout/base.xml
@@ -15,6 +15,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" />
 
+    <Button
+            android:id="@+id/locate_button"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:layout_above="@id/pager_results_container"
+            android:layout_alignParentRight="true"
+            android:onClick="locateButtonAction"
+            android:background="@drawable/ic_locate" />
+
     <FrameLayout
         android:id="@+id/routes_preview_container"
         android:layout_width="match_parent"
