--- a/res/layout/route_widget.xml
+++ b/res/layout/route_widget.xml
@@ -32,6 +32,14 @@
             android:padding="@dimen/resume_padding"
             android:background="@android:color/transparent"
             android:visibility="gone" />
+
+        <com.mapzen.widget.DebugView
+                android:id="@+id/debugging"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/debug_view_height"
+                android:layout_alignParentBottom="true"
+                android:background="#66000000"
+                android:visibility="gone" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -97,13 +105,5 @@
             android:layout_height="20dp"
             android:layout_above="@id/footer"
             android:background="@color/dark_gray" />
-
-        <com.mapzen.widget.DebugView
-            android:id="@+id/debugging"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/debug_view_height"
-            android:layout_above="@id/divider"
-            android:background="#66000000"
-            android:visibility="gone" />
     </RelativeLayout>
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
