--- a/res/menu/options_menu.xml
+++ b/res/menu/options_menu.xml
@@ -9,14 +9,17 @@
 
     <item android:id="@+id/settings"
           android:title="@string/settings"
+          android:visible="false"
           android:showAsAction="never" />
 
     <item android:id="@+id/phone_home"
           android:title="@string/submit_data"
+          android:visible="false"
           android:showAsAction="never" />
 
     <item android:id="@+id/upload_traces"
           android:title="@string/upload_traces"
+          android:visible="false"
           android:showAsAction="never" />
 
     <item android:id="@+id/login"
