--- a/res/layout/instruction.xml
+++ b/res/layout/instruction.xml
@@ -11,8 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:paddingLeft="@dimen/arrow_padding"
-        android:background="@android:color/transparent"
-        android:onClick="onLeftArrowClick"/>
+        android:background="@android:color/transparent" />
 
     <LinearLayout
         android:layout_width="@dimen/turn_info_width"
@@ -20,20 +19,20 @@
         android:orientation="vertical"
         android:paddingLeft="@dimen/instruction_horizontal_padding">
 
-    <ImageView
-        android:id="@+id/turn_icon"
-        android:contentDescription="@string/route_description"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/turn_icon_height"
-        android:layout_marginTop="@dimen/turn_icon_margin"/>
+        <ImageView
+            android:id="@+id/turn_icon"
+            android:contentDescription="@string/route_description"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/turn_icon_height"
+            android:layout_marginTop="@dimen/turn_icon_margin" />
 
-    <TextView
-        android:id="@+id/distance_instruction"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fontFamily="sans-serif-condensed"
-        android:textStyle="bold"
-        android:textColor="@color/brown"/>
+        <TextView
+            android:id="@+id/distance_instruction"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="sans-serif-condensed"
+            android:textStyle="bold"
+            android:textColor="@color/brown" />
     </LinearLayout>
 
     <ImageView
@@ -75,7 +74,6 @@
         android:layout_gravity="center_vertical"
         android:src="@drawable/ic_right_arrow"
         android:paddingRight="@dimen/arrow_padding"
-        android:background="@android:color/transparent"
-        android:onClick="onRightArrowClick"/>
+        android:background="@android:color/transparent" />
 
 </LinearLayout>
