--- a/res/layout/route_widget.xml
+++ b/res/layout/route_widget.xml
@@ -24,7 +24,7 @@
 
         <ImageButton
             android:id="@+id/resume_button"
-            android:src="@drawable/ic_resume"
+            android:src="@drawable/ic_resume_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
