--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -34,6 +34,8 @@
     <dimen name="drag_area_height">20dp</dimen>
     <dimen name="debug_view_height">148dp</dimen>
     <dimen name="routing_footer_left_padding">10dp</dimen>
+    <dimen name="circle_bottom_padding">15dp</dimen>
+
     <!-- fonts -->
     <dimen name="big">32sp</dimen>
     <dimen name="medium">21sp</dimen>
